New charts, features and improvements
